# website-change-discord

./: .env.bak  .gitignore  GEMINI.md  README.md  config.yaml  hashes.db  pyproject.toml
.jules/: sentinel.md
src/: __init__.py  add_site.py  main.py  ssrf_adapter.py
systemd/: website-change.path  website-change.service  website-change.timer
tests/: test_main.py
